# evaluation_test

./: .gitignore  README.md  pyproject.toml  requirements.txt
